src/objects/KPI_Metric__c.object
<CustomObject>
    <description>The definition of a KPI metric in terms of it&apos;s name, data type, and database field mapping</description>
    <fields>
        <fullName>Data_Type__c</fullName>
        <label>Data Type</label>
        <picklist>
            <picklistValues>
                <fullName>Boolean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Currency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percent</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Database_Field_Mapping_API_Name__c</fullName>
        <description>The API names of the table and field the KPI metric maps to. Ex. &quot;BudgetHeader__c.TotalRevenue__c&quot;</description>
        <inlineHelpText>The API names of the table and field the KPI metric maps to. Ex. &quot;BudgetHeader__c.TotalRevenue__c&quot;</inlineHelpText>
        <label>Database Field Mapping (API Name)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ThresholdDescription__c</fullName>
        <label>Threshold Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <label>Unit of Measure</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>KPI Metric</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Is_Active__c</columns>
        <columns>Unit_of_Measure__c</columns>
        <columns>Database_Field_Mapping_API_Name__c</columns>
        <columns>Data_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>KPI Metric Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KPI Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>